--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
       <head>
             <meta charset="utf-8">
             <title>WebBlog</title>
+
+            <style type="text/css">
+            		#main {
+            			max-width: 600px;
+            			border: 3px solid #6AC5AC;
+            			margin: 0 auto;	
+            		}
+
+            		span {
+            			background-color: #6AC5AC;	
+            		}
+
+            </style>
       </head>
             
       <body>
 
-            hello web blog!
+      	<div id="main">
+      		<span>&#60;div id="main"&#62;</span>
+      		<p>
+      			#"margin: auto":
+      			set the left and right margin to "auto" 
+      			will render element to horizontal center that element within its container 
+      		</p>
+      		<p>
+      			#"max-width":
+      			be used to handing of small windows. (for example: mobile windows)
+      			when the left and right margin to "auto".
+      		</p>
+      		<span>&#60;/div id="main"&#62;</span>
+      	</div>
+
+
 
       </body>
 </html>
