--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
-      <head>
-            <meta charset="utf-8">
-            <title>WebBlog</title>
+<head>
+      <meta charset="utf-8">
+      <title>WebBlog</title>
 
-            <style type="text/css">
-
-            </style>
-      </head>
+      <link rel="stylesheet" href="source/styles/main.css">
+</head>
+<body>
+      <div>
             
-      <body>
+      </div>
+      <strong>Topics</strong>
+      <details open="true">
+            <summary>Guides</summary>
+            <ol>
+                  <li>
+                        <a href="guides/guides_index.html">Web Guides</a>
+                  </li>
+            </ol>
+       </details>
 
-      	<a href="../webBlog/html_css/box model.html">box model</a>
-
-      </body>
+       <details>
+            <summary>Others</summary>
+            to be continue...
+       </details>
+</body>
 </html>
