--- a/guides/guides_index.html
+++ b/guides/guides_index.html
@@ -14,11 +14,12 @@
         </div>
         
         <div id="content_div" class="column-content">
-            <iframe id="content_iframe" src="css/box model.html" 
+            <iframe id="content_iframe" name="content_iframe" style="min-height: 800px;" 
                 frameborder="0" width="100%" scrolling="yes" 
                 onload="onload_content()">
             </iframe>
         </div>
     </div>
+
 </body>
 </html>
