--- a/guides/css/styling boxes.html
+++ b/guides/css/styling boxes.html
@@ -81,7 +81,8 @@
 
         <!-- background-clip -->
         <p><span class="tspan">margin collapsing</span></p>
-        <div style="padding: 5px; border: 1px dashed black; display: inline-block;float: left;margin-right: 20px;">
+        <p class="note">if two adjacent elements both have the margin set on them. and the two margins touch, the larger of the two remains, and the smaller one disappears. (effect on vertical, not horizontal) </p>
+        <div style="padding: 5px; border: 1px dashed black; display: inline-block;margin-right: 20px;">
             <div style="border: 2px solid black; margin-bottom: 10px; width: 200px;height: 50px;">
                 <code>margin-bottom: 10px;</code>
             </div>
@@ -89,15 +90,13 @@
                 <code>margin-top: 20px;</code>
             </div>
         </div>
-        <p style="width: 600px;">if two adjacent elements both have the margin set on them. and the two margins touch, the larger of the two remains, and the smaller one disappears. (effect on vertical, not horizontal) </p>
 
          <!-- background-clip -->
-         <div style="clear: left; "></div>
         <p><span class="tspan">outline</span></p>
-        <div style="border: 1px dashed black;padding: 5px;display: inline-block;">
+        <div style="border: 1px dashed black;padding: 5px; width: 400px;" >
             <div class="outline">
                 <code>
-                    width: 400px;<br>
+                    width: 100%;<br>
                     height: 200px;<br>
                     border: 10px solid black;<br>
                     border-radius: 50px;<br>
@@ -107,8 +106,91 @@
             <p>parent div(the dashed box)<br><code>border: 1px dashed black;padding: 5px</code></p>
             <p><code>outline</code> is not part of the box model and never <br>take up space(can't changing the size of the box)</p>
         </div>
+        
+        <!-- background -->
+        <p><span class="tspan">background</span></p>
+        <div class="note">
+            <p>
+                <code>background-color : rgba(255,255,255, 0.3);</code> -default color is not <code>white</code> but <code>transparent</code>
+            </p>
+            <p><code>background-image : </code>  - bg image</p>
+                <ul><code style="color: blue">ulr(path)</code> : image path</ul>
+                <ul><code style="color: blue">linear-gradient()</code> : color gradients</ul>
+            <p><code>background-repeat: repeat</code>(default), for <code>background-image</code></p>
+            <ul>
+                <li><code>repeat</code> : repeat both vertical and horizontal.</li>
+                <li><code>repeat-x</code> : repeat horizontal</li>
+                <li><code>repeat-y</code> : repeat vertical</li>
+                <li><code>no-repeat</code> : will not repeat at all.</li>
+            </ul>
+            <p><code>background-position</code> : x y, for <code>background-image</code></p> 
+            <ul>
+                <li><code>background-position: 20px, 20px</code></li>
+                <li><code>background-position: 20rem 20rem</code></li>
+                <li><code>background-position: 90% 20%</code></li>
+                <li><code>background-position: right center;</code></li>
+            </ul>
 
-        <a class="test" href="#">test</a>
+            <p>color gradient:</p>
+            <code>background-image: linear-gradient(to bottom, red, blue 20%, red)</code>:
+            <div style="width: 600px; height: 100px; background-image: linear-gradient(to bottom, red, blue 20%, red)"></div>
+            <code>background-image: linear-gradient(180deg, red, blue 20px, red)</code>:
+            <div style="width: 600px; height: 100px; background-image: linear-gradient(180deg, red, blue 20px, red)"></div>
+
+            <p>multiple backgrounds</p>
+            <code>background: <br>
+                    url(https://mdn.mozillademos.org/files/13060/border-image.png) no-repeat<br>
+                    ,url(https://mdn.mozillademos.org/files/13026/fire-ball-icon.png )<br>
+                    ,linear-gradient(to right, yellow, #dddd00 50%, red);</code>
+            <div style="width: 600px; height: 200px;border: 1px solid black; 
+                background: 
+                    url(https://mdn.mozillademos.org/files/13060/border-image.png) no-repeat
+                    ,url(https://mdn.mozillademos.org/files/13026/fire-ball-icon.png )
+                    ,linear-gradient(to right, yellow, #dddd00 50%, red);"></div>
+        </div>
+
+        <!-- border -->
+        <p><span class="tspan">border</span></p>
+        <div class="note" style="border: 1px solid black">
+            <code>border: border-width border-style border-color;</code><br>
+            <code>border-radius: 20px;</code> used like <code>margin</code>
+            <ul>
+                <li><code>border-radius: 20px;</code> // all the corners use the  same radius.</li>
+                <li><code>border-radius: 20px 10px;</code> // 20px is top left and bottom right, 10px is top right and bottom left</li>
+                <li><code>border-radius: 20px 10px 30px 0;</code> //you know that.
+                 <li><code>border-radius: 30px/20px 50px/ 30px;</code> //ellilptical corner, use x-radius / y-radius;
+            </ul>
+            <div style="border: 2px solid blue; border-radius: 40px/20px; padding: 10px;">
+                <code>border: 2px solid blue;<br> border-radius: 40px/20px;</code>
+            </div>
+
+
+            <code>border-image-source: url(xxx)</code> ...
+            <code>border-image-slice: 40</code> ...
+            <code>border-image-repeat: stretch</code> ...
+            <ul>
+                <li><code>stretch:</code> the default, images are stretched to fill the border, not recommended.</li>
+                <li><code>repeat:</code> the default, images are repeated util it to fill the border</li>
+                ...
+            </ul>
+            shorthand: <br>
+            <code>border-image: url, slice, repeat</code>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <a class="test" href="#">top</a>
     </div>
 </body>
 </html>
